# Lipsync

./: LICENSE  README.md  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: run_tests.yml
backend/: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.backend.backup  __init__.py  app.py  config.py  pyproject.toml  routes.py  utils.py
backend/docker/: Dockerfile.backend  download_models.py
backend/services/: __init__.py  merge_service.py  wav2lip_inference.py
backend/tests/: base.py  test_routes.py
backend/tests/services/: test_merge_service.py  test_wav2lip_inference.py
backend/wav2lip-hq/: .gitignore  requirements.txt
docs/: api.md  design_requirements.md  overview.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile.frontend  index.html  package-lock.json  package.json  tailwind.config.js
frontend/docker/: Dockerfile.frontend
frontend/nginx/: nginx.conf
frontend/src/: App.jsx
frontend/src/components/: ProgressBar.jsx  RecordButton.jsx  Recorder.jsx  StatusDisplay.jsx  StopButton.jsx
wav2liphq/: Dockerfile.wav2liphq  download_models.py  run_inference.sh
