[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kyle Cain <kylecain.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <=3.13"
flask = "^2.3.3"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
